# habitzen

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
k6/: readme.md  script_teste.js
src/: enums.py  main.py  routers.py  schemas.py
src/db/: init.sql
